--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,14 @@
     "@babel/preset-react": "^7.0.0",
     "@types/cheerio": "^0.22.13",
     "@types/core-js": "^2.5.2",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/node": "^12.7.11",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "@types/redux-mock-store": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
@@ -51,7 +55,7 @@
     "css-loader": "^3.2.0",
     "document-register-element": "^1.14.3",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-preact-pure": "^2.1.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "es-check": "^5.0.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
@@ -79,7 +83,6 @@
     "postcss-simple-vars": "^5.0.2",
     "postcss-url": "^8.0.0",
     "postcss-wrap": "0.0.4",
-    "preact-context": "^1.1.4",
     "prettier": "^1.18.2",
     "redux-mock-store": "^1.5.3",
     "style-loader": "^1.0.0",
@@ -94,13 +97,15 @@
   },
   "dependencies": {
     "@github/markdown-toolbar-element": "^1.1.0",
+    "@types/react-redux": "^7.1.5",
     "@webcomponents/custom-elements": "^1.3.0",
     "bem-react-helper": "^1.1.2",
     "core-js": "^3.2.1",
     "focus-visible": "^5.0.2",
     "intersection-observer": "^0.7.0",
-    "preact": "^8.5.2",
-    "preact-redux": "^2.0.3",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
